Added gpsTrack{GDL90,VTG,RMC} values to ahrsInfo.  ADded stale data class. Seems to have broken UDP receipt.  Investigating
Former-commit-id: adbfc8cb7ba6c10f405e37e94d58d632a91b0d01
Former-commit-id: cab375447bc2f9581a7969d5a21c871b797f0a37

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,8 +9,19 @@ parsed_vtg.txt:	nmea.txt test_tinygps
 %:	%.cpp
 	g++ -DUBUNTU -I.. -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
 
-%.plog: %.dat plog
-	./plog $< > $@
+test_plog_0: test_plog.cpp ../RollAHRS.h
+	g++ -DUBUNTU -I.. -DLOGITEM_VERSION=LogItem0 -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
+
+test_plog_B:	test_plog.cpp  ../RollAHRS.h
+	g++ -DUBUNTU -I.. -DLOGITEM_VERSION=LogItemB -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
+
+test_plog_C:	test_plog.cpp  ../RollAHRS.h
+	g++ -DUBUNTU -I.. -DLOGITEM_VERSION=LogItemC -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
+
+%.plog:	 %.dat test_plog_0
+	./test_plog_0 $< > $@
+	
+
 
 %.ATT:  %.bin
 	mavlogdump.py --types ATT --format csv --csv_sep ' '  $< > $@
