Introduce roll PID I component, introduce max I limit to PID
Former-commit-id: c9b57ff8367259d32ed7faed1d71b6ff39e7bf34
Former-commit-id: b2b7b250d01f995957ec18fd50d380b283a0abf2

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,7 +15,7 @@ test_plog_0: test_plog.cpp ../RollAHRS.h
 test_plog_B:	test_plog.cpp  ../RollAHRS.h
 	g++ -DUBUNTU -I.. -DLOGITEM_VERSION=LogItemB -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
 
-test_plog_C:	test_plog.cpp  ../RollAHRS.h
+test_plog_C:	test_plog.cpp  ../RollAHRS.h ../PidControl.h
 	g++ -DUBUNTU -I.. -DLOGITEM_VERSION=LogItemC -I/home/jim/Arduino/libraries/TinyGPSPlus-1.0.2/src $< -o $@ -g
 
 %.plog:	 %.DAT test_plog_C
