First commit of pitch control.   Hopefully suitable for in-flight tuning
Former-commit-id: b90be404cd3e5337ed82c7017bab06b78fd509b0
Former-commit-id: 4b40fb314523051bfed52ce0065b6cb97e5f8409

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-all:	test_plog test_tinygps parsed_vtg.txt
+all:	test_plog_C test_tinygps parsed_vtg.txt
 
 clean:
 	rm test_plog test_tinygps parsed_vtg.txt
