Working on nav track sim
Former-commit-id: 04a1d21ab323aaae3a563a3946ea1a828d345ced

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/winglevlr_ubuntu",
-            "args": ["--serial","--tracksim","./tracksim_KBFI_14R.txt","--seconds","6000"],
+            "args": ["--serial","--startpos","47.59509212379994,-122.38743386638778,1000","--seconds","60","--log","+"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
