--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "winglevlr replay AHRSD017",
+            "name": "winglevlr",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/winglevlr_ubuntu",
-            "args": ["--serial","--replay","./logs/AHRSD017.DAT"],
+            "args": ["--button" "5,39,1,1" "--button" "10,39,1,1"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
