Compiles with built-in lvgl control panel

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "winglevlr",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/winglevlr_ubuntu",
-            "args": ["--servovis", "0", "--testStick"],
+            "program": "${workspaceFolder}/csim",
+            "args": ["--espnowPipe", "/tmp/fifo1", "/tmp/fifo2", "--mac", "ffffe"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
