Add --lvgl csim flag to launch lvgl panel

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/csim",
-            "args": ["--espnowPipe", "/tmp/fifo1", "/tmp/fifo2", "--mac", "ffffe"],
+            "args": ["--lvgl"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
